@@ -4,7 +4,6 @@
 
 #include <testfwk.h>
 
-#if 0
 float cast1 (float a)
 {
   return !(int)a;
@@ -14,19 +13,16 @@ float cast2 (_Bool b)
 {
   return b;
 }
-#endif
 
 const float b0 = 0.0f;
 const float b1 = 1.0f;
 
 void testBug(void)
 {
-#if 0
   ASSERT (cast1 (1.0f) == b0);
   ASSERT (cast1 (0.0f) == b1);
 
   ASSERT (cast2 (0.0f) == b0);
   ASSERT (cast2 (1.0f) == b1);
-#endif
 }
 
