@@ -2,6 +2,9 @@
 
 	* support/regression/tests/bug-2834.c:
 	  Test for bug #2834.
+	* src/SDCCopt.c,
+	  support/regression/tests/bug-2833.c:
+	  Fix bug #2833 (patch by Noam Preil).
 
 2018-11-11 Philipp Klaus Krause <pkk AT spth.de>
 
